fix: update scrollbar styles for improved visibility and interaction

--- a/style.css
+++ b/style.css
@@ -12,22 +12,28 @@ body::-webkit-scrollbar {
   appearance: none;
   width: 15;
   background: linear-gradient(to bottom, white, aliceblue);
-  opacity: 0;
 }
 
 body::-webkit-scrollbar-track {
-  background-color: rgb(95, 152, 216);
-  border-top-right-radius: 7px;
-  border-bottom-right-radius: 7px;
-  box-shadow: inset 0px 0px 5px rgb(0, 44, 139);
+  background-color: #034baafa;
 }
 
 body::-webkit-scrollbar-thumb {
+  cursor: pointer;
   appearance: none;
   width: 15px;
   border-radius: 10px;
+  background-color: #034baafa;
+}
 
-  background-color: #206aca;
+body::-webkit-scrollbar-thumb:hover {
+  border-style: dashed;
+  border-color: white;
+  border-width: 1px;
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: rgb(202, 223, 253);
 }
 
 
